--- a/.target/views/main.scala.html
+++ b/.target/views/main.scala.html
@@ -7,9 +7,17 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <link href="@routes.Assets.at("stylesheets/bootstrap.css")" rel="stylesheet">
+        <link href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")" rel="stylesheet">
     </head>
     <body>
-        @content
+    	<header>
+    		<h1><a href="@routes.Doses.index" title="Home">PastillApp</a></h1>
+    	</header>
+    	<div class="container-fluid">
+        	@content
+        </div>
+        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    	<script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
     </body>
 </html>
