--- a/app/views/doses/update.scala.html
+++ b/app/views/doses/update.scala.html
@@ -5,7 +5,7 @@
 @import helper._
 
 @main ("Update Dose"){
-	@helper.form(action = routes.Doses.add(id)) {
+	@helper.form(action = routes.Doses.update(id)) {
 	   <div class="span12">
 	     <label title="Medicine" for="fragment">Medicine:</label><br>
 	     <input type="text" name="medicine" id="medicine" placeholder="Place a Medicine" value="@dose.medicine"/>
