--- a/.target/views/login.scala.html
+++ b/.target/views/login.scala.html
@@ -1,16 +1,6 @@
 @(form: Form[(String,String)])(implicit flash: Flash)
 
-<html>
-    <head>
-        <title>Zentasks</title>
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
-    </head>
-    <body>
-        
-        <header>
-            <a href="@routes.Application.index" id="logo"><span>Zen</span>tasks</a>
-        </header>
+@main("login"){
         
         @helper.form(routes.Application.authenticate) {
             
@@ -40,9 +30,4 @@
             
         }
         
-        <p class="note">
-            Try <em>guillaume@@sample.com</em> with <em>secret</em> as password.
-        </p>
-            
-    </body>
-</html>
+}
