--- a/.target/views/main.scala.html
+++ b/.target/views/main.scala.html
@@ -11,11 +11,27 @@
         <link href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")" rel="stylesheet">
     </head>
     <body>
-    	<header>
-    		<h1><a href="@routes.Doses.index" title="Home">PastillApp</a></h1>
-    	</header>
     	<div class="container-fluid">
+	    	<header>
+	    		<div class="masthead">
+			        <ul class="nav nav-pills pull-right">
+			          <li class="active"><a href="@routes.Application.index">Home</a></li>
+			          <li><a href="#">Settings</a></li>
+			          <li><a href="#">About</a></li>
+			        </ul>
+	        		<h3 class="muted">PastillApp</h3>
+	        	</div>
+	    	</header>
+	    </div>
+	    <hr/>
+	    <div class="container-fluid">
         	@content
+        </div>
+        <hr/>
+        <div class="container-fluid">
+        	<div class="footer">
+        		<p>© Company 2013</p>
+      		</div>
         </div>
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     	<script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
