--- a/app/views/doses/index.scala.html
+++ b/app/views/doses/index.scala.html
@@ -3,7 +3,7 @@
 
 @main("Index") {
 	@for(dose <- seq){
-		<div class="dose">
+		<div class="span12">
 			<h3>@dose.medicine</h3>
 			<p>@dose.amount @dose.measure</p>
 		</div>
