--- a/.target/views/doses/update.scala.html
+++ b/.target/views/doses/update.scala.html
@@ -1,2 +1,28 @@
-@* update Template File *@
-@(param: Any)
+@(dose:Dose)(implicit flash:Flash)
+
+@import Option._
+@import helper._
+
+@main ("Update Dose") {
+	@helper.form(action = routes.Doses.update(dose.id.get)) {
+	   <div class="span12">
+	     <label title="Medicine" for="fragment">Medicine:</label><br>
+	     <input type="text" name="medicine" id="medicine" placeholder="Place a Medicine" value="@dose.medicine"/>
+	   </div>
+	   <div class="span12">
+	     <label title="Amount" for="amount">Medicine:</label><br>
+	     <input type="text" name="amount" id="amount" placeholder="Place the amount required" value="@dose.amount"/>
+	   </div>
+	   <div class="span12">
+	     <label title="Measure" for="measure">Measure:</label><br>
+	     <input type="text" name="measure" id="measure" placeholder="Place the measure" value="@dose.measure"/>
+	   </div>
+	   <div class="span12">
+	     <label title="User" for="user">User:</label><br>
+	     <input type="text" name="user" id="user" placeholder="Place the user" value="@dose.user.id.get"/>
+	   </div>
+	   <div class="span12">
+	   	 <input type="submit" title="Submit for validation" value="Check" class="button"/>
+	   </div>
+	}
+}
