--- a/.target/views/users/update.scala.html
+++ b/.target/views/users/update.scala.html
@@ -1,4 +1,4 @@
-@()(implicit flash:Flash)
+@(user:User)(implicit flash:Flash)
 
 @import Option._
 @import helper._
@@ -7,31 +7,31 @@
 	<form method="POST" action="@routes.Users.create">
 	   <div class="span12">
 	     <label title="email" for="fragment">Medicine:</label><br>
-	     <input type="email" name="email" id="email" placeholder="me@@example.com"/>
+	     <input type="email" name="email" id="email" placeholder="me@@example.com" value="@user.email"/>
 	   </div>
 	   <div class="span12">
 	     <label title="Password" for="password">Medicine:</label><br>
 	     <input type="password" name="password" id="password"/>
 	   </div>
 	   <div class="span12">
-	     <label title="Mame" for="name">Name:</label><br>
-	     <input type="text" name="name" id="name" placeholder=""/>
+	     <label title="Name" for="name">Name:</label><br>
+	     <input type="text" name="name" id="name" placeholder="" value="@user.name"/>
 	   </div>
 	   <div class="span12">
 	     <label title="Surname" for="surname">Surname:</label><br>
-	     <input type="text" name="surname" id="surname" placeholder=""/>
+	     <input type="text" name="surname" id="surname" placeholder="" value="@user.surname"/>
 	   </div>
 	   <div class="span12">
 	     <label title="Address" for="address">Address:</label><br>
-	     <input type="text" name="address" id="address" placeholder=""/>
+	     <input type="text" name="address" id="address" placeholder="" value="@user.address"/>
 	   </div>
 	   	   <div class="span12">
 	     <label title="Zip Code" for="zip_code">Zip Code:</label><br>
-	     <input type="number" name="zip_code" id="zip_code" placeholder=""/>
+	     <input type="number" name="zip_code" id="zip_code" placeholder="" value="@user.zip"/>
 	   </div>
 	   	   <div class="span12">
 	     <label title="Telephone" for="telephone">Telephone:</label><br>
-	     <input type="tel" name="telephone" id="telephone" placeholder=""/>
+	     <input type="tel" name="telephone" id="telephone" placeholder="" value="@user.telephone"/>
 	   </div>
 	   <div class="span12">
 	   	 <input type="submit" title="Submit" value="Check" class="btn btn-success span12"/>
