--- a/app/views/contacts/create.scala.html
+++ b/app/views/contacts/create.scala.html
@@ -22,10 +22,20 @@
 	<body>
 		<div class="container-fluid">
 			<h1>pastillApp</h1>
-			<h2>Add manager</h2>
+			<h2>Add contact</h2>
 			<form class="well">
-				<label>Mail</label>
-				<input type="email" id="mail" name="mail" />
+				<label>Telephone</label>
+				<input type="tel" id="telephone" name="telephone" />
+				<label>Name</label>
+				<input type="text" id="name" name="name" />
+				<label>Surname</label>
+				<input type="text" id="surname" name="surname" />
+				<label>Genre</label>
+				<select id="genre" name="genre">
+					<option value="U">Undefined</option>
+					<option value="M">Male</option>
+					<option value="F">Female</option>
+				</select>
 				<br/>
 				<input type="submit" class="btn btn-primary" value="Submit" />
 			</form>
