--- a/app/views/doses/index.scala.html
+++ b/app/views/doses/index.scala.html
@@ -1,5 +1,5 @@
 @* index Template File *@
-@(seq: Seq[Dose])
+@(id:Long, seq: Seq[Dose])
 
 @main("Index") {
 	@for(dose <- seq){
@@ -7,6 +7,8 @@
 			<h3>@dose.medicine Alert!</h3>
 			<p>You need to take @dose.amount @dose.measure in *** minutes.</p>
 		</div>
-		<a href="@routes.Doses.editForm(dose.id.get)" title="Edit Alert" class="span2 btn btn-danger">Modify</a>
+		<a href="@routes.Doses.updateForm(id)" title="Edit Alert" class="span2 btn">Update</a>
+		<a href="@routes.Doses.delete(dose.id.get)" title="Edit Alert" class="span2 btn" data-method="POST">Delete</a>
 	}
+	<a href="" title="Edit Alert" class="span12 btn">Add Alerts</a>
 }
