--- a/app/views/doses/update.scala.html
+++ b/app/views/doses/update.scala.html
@@ -3,26 +3,29 @@
 @import Option._
 @import helper._
 
-@main ("Update Dose") {
-	@helper.form(action = routes.Doses.update(dose.id.get)) {
+@main("Update Dose") {
+	<form method="POST" action="@routes.Doses.update(dose.id.get)">
 	   <div class="span12">
 	     <label title="Medicine" for="fragment">Medicine:</label><br>
-	     <input type="text" name="medicine" id="medicine" placeholder="Place a Medicine" value="@dose.medicine"/>
+	     <input class="span12" type="text" name="medicine" id="medicine" placeholder="Place a Medicine" value="@dose.medicine"/>
 	   </div>
 	   <div class="span12">
 	     <label title="Amount" for="amount">Medicine:</label><br>
-	     <input type="text" name="amount" id="amount" placeholder="Place the amount required" value="@dose.amount"/>
+	     <input class="span12" type="text" name="amount" id="amount" placeholder="Place the amount required" value="@dose.amount"/>
 	   </div>
 	   <div class="span12">
 	     <label title="Measure" for="measure">Measure:</label><br>
-	     <input type="text" name="measure" id="measure" placeholder="Place the measure" value="@dose.measure"/>
+	     <input class="span12" type="text" name="measure" id="measure" placeholder="Place the measure" value="@dose.measure"/>
 	   </div>
 	   <div class="span12">
-	     <label title="User" for="user">User:</label><br>
-	     <input type="text" name="user" id="user" placeholder="Place the user" value="@dose.user.id.get"/>
+	     <label title="User" for="user_id">User:</label><br>
+	     <input class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user" value="@dose.user.id.get"/>
 	   </div>
 	   <div class="span12">
-	   	 <input type="submit" title="Submit for validation" value="Check" class="button"/>
+	   	 <input type="submit" title="Submit" value="Check" class="btn btn-success span12"/>
 	   </div>
-	}
+	   <div class="span12">
+	   	 <a title="Cancel" href="@routes.Application.index" class="btn span12">Cancel</a>
+	   </div>
+	</form>
 }
