--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -36,4 +36,24 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     	<script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
     </body>
+    <script>
+	//Unobtrusive Restful "Converter"
+	$('a[data-method]').each(function() {
+		$(this).append(function() {
+			return "\n" + "<form action='" + $(this).attr('href') + "' method='POST' style='display:none'>\n" + "   <input type='hidden' name='_method' value='" + $(this).attr('data-method') + "'>\n" + "</form>\n";
+		}).removeAttr('href');
+		console.info($('html').attr('lang'));
+		$(this).click(function(event) {
+			var $a = $(this);
+			if ($a.attr('data-method') == 'delete') {
+				event.preventDefault();
+				var lang = $('html').attr('lang');
+				var answer = confirm(lang == "es" ? "¿Está Seguro?" : "Are you sure?");
+				answer && $(this).find("form").submit();
+			} else {
+				$(this).find("form").submit();
+			}
+		});
+	});
+    </script>
 </html>
