--- a/.target/views/doses/create.scala.html
+++ b/.target/views/doses/create.scala.html
@@ -7,20 +7,20 @@
 @main("Create Dose"){
 	<form method="POST" action="@routes.Doses.create(id)">
 	   <div class="span12">
-	     <label title="Medicine" for="fragment">Medicine:</label><br>
-	     <input type="text" name="name" id="name" placeholder="Place a Medicine"/>
+	     <label title="Medicine" for="medicine">Medicine:</label><br>
+	     <input class="span12" type="text" name="medicine" id="medicine" placeholder="Place a Medicine"/>
 	   </div>
 	   <div class="span12">
-	     <label title="Amount" for="amount">Medicine:</label><br>
-	     <input type="text" name="amount" id="amount" placeholder="Place the amount required"/>
+	     <label title="Amount" for="amount">Amount:</label><br>
+	     <input class="span12" type="text" name="amount" id="amount" placeholder="Place the amount required"/>
 	   </div>
 	   <div class="span12">
 	     <label title="Measure" for="measure">Measure:</label><br>
-	     <input type="text" name="measure" id="measure" placeholder="Place the measure"/>
+	     <input class="span12" type="text" name="measure" id="measure" placeholder="Place the measure"/>
 	   </div>
-	   	   <div class="span12">
+	   <div class="span12">
 	     <label title="User" for="user_id">User:</label><br>
-	     <input class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user"/>
+	     <input class="span12" class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user"/>
 	   </div>
 	   <div class="span12">
 	   	 <input type="submit" title="Submit" value="Check" class="btn btn-success span12"/>
