--- a/.target/views/doses/index.scala.html
+++ b/.target/views/doses/index.scala.html
@@ -10,5 +10,5 @@
 		<a href="@routes.Doses.updateForm(id)" title="Edit Alert" class="span2 btn">Update</a>
 		<a href="@routes.Doses.delete(dose.id.get)" title="Edit Alert" class="span2 btn" data-method="POST">Delete</a>
 	}
-	<a href="" title="Edit Alert" class="span12 btn">Add Alerts</a>
+	<a href="@routes.Doses.create(id)" title="Edit Alert" class="span12 btn">Add Alerts</a>
 }
