--- a/.target/views/doses/update.scala.html
+++ b/.target/views/doses/update.scala.html
@@ -6,7 +6,7 @@
 @main("Update Dose") {
 	<form method="POST" action="@routes.Doses.update(dose.id.get)">
 	   <div class="span12">
-	     <label title="Medicine" for="fragment">Medicine:</label><br>
+	     <label title="Medicine" for="name">Medicine:</label><br>
 	     <input class="span12" type="text" name="medicine" id="medicine" placeholder="Place a Medicine" value="@dose.medicine"/>
 	   </div>
 	   <div class="span12">
