--- a/.target/views/doses/update.scala.html
+++ b/.target/views/doses/update.scala.html
@@ -18,8 +18,12 @@
 	     <input class="span12" type="text" name="measure" id="measure" placeholder="Place the measure" value="@dose.measure"/>
 	   </div>
 	   <div class="span12">
+	     <label title="Period" for="period">Period:</label><br>
+	     <input class="span12" type="number" name="period" id="period" placeholder="Place the period" value="@dose.period"/>
+	   </div>
+	   <div class="span12">
 	     <label title="User" for="user_id">User:</label><br>
-	     <input class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user" value="@dose.user.id.get"/>
+	     <input class="span12" class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user" value="@dose.user.id.get"/>
 	   </div>
 	   <div class="span12">
 	   	 <input type="submit" title="Submit" value="Check" class="btn btn-success span12"/>
