--- a/app/views/doses/create.scala.html
+++ b/app/views/doses/create.scala.html
@@ -19,6 +19,10 @@
 	     <input class="span12" type="text" name="measure" id="measure" placeholder="Place the measure"/>
 	   </div>
 	   <div class="span12">
+	     <label title="Period" for="period">Period:</label><br>
+	     <input class="span12" type="number" name="period" id="period" placeholder="Place the period"/>
+	   </div>
+	   <div class="span12">
 	     <label title="User" for="user_id">User:</label><br>
 	     <input class="span12" class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user"/>
 	   </div>
