--- a/.target/views/doses/index.scala.html
+++ b/.target/views/doses/index.scala.html
@@ -7,7 +7,7 @@
 			<h3>@dose.medicine Alert!</h3>
 			<p>You need to take @dose.amount @dose.measure in @dose.amount secconds.</p>
 		</div>
-		<a href="@routes.Doses.updateForm(id)" title="Edit Alert" class="span2 btn">Update</a>
+		<a href="@routes.Doses.updateForm(dose.id.get)" title="Edit Alert" class="span2 btn">Update</a>
 		<a href="@routes.Doses.delete(dose.id.get)" title="Edit Alert" class="span2 btn" data-method="POST">Delete</a>
 	}
 	<a href="@routes.Doses.create(id)" title="Edit Alert" class="span12 btn">Add Alerts</a>
