--- a/app/views/doses/create.scala.html
+++ b/app/views/doses/create.scala.html
@@ -1,5 +1,5 @@
 @* create Template File *@
-@(id:Long)(implicit flash:Flash)
+@(id:Long, managees: Seq[models.User])(implicit flash:Flash)
 
 @import Option._
 @import helper._
@@ -24,7 +24,11 @@
 	   </div>
 	   <div class="span12">
 	     <label title="User" for="user_id">User:</label><br>
-	     <input class="span12" class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user"/>
+	     <select id="user_id" name="user_id" class="span12">
+	     	@for(managee <- managees){
+			<option value="@managee.id">@managee.name @managee.surname</option>
+			}
+		 </select>
 	   </div>
 	   <div class="span12">
 	   	 <input type="submit" title="Submit" value="Check" class="btn btn-success span12"/>
