Add contact, doses and users forms

--- a/.target/views/contacts/index.scala.html
+++ b/.target/views/contacts/index.scala.html
@@ -1,4 +1,4 @@
-@(seq: Seq[Contact])
+@(seq: Seq[Contact])(implicit session:play.api.mvc.Session)
 @main("Index") {
 	<h1>pastillApp</h1>
 	<h2>Contacts</h2>
