--- a/.target/views/login.scala.html
+++ b/.target/views/login.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[(String,String)])(implicit flash: Flash)
+@(form: Form[(String,String)])(implicit flash: Flash, session:play.api.mvc.Session)
 
 @main("login"){
         
