--- a/app/views/doses/create.scala.html
+++ b/app/views/doses/create.scala.html
@@ -1,5 +1,5 @@
 @* create Template File *@
-@(id:Long)(implicit flash:Flash)
+@(id:Long)(implicit flash:Flash, session:play.api.mvc.Session)
 
 @import Option._
 @import helper._
