--- a/app/views/doses/update.scala.html
+++ b/app/views/doses/update.scala.html
@@ -1,4 +1,4 @@
-@(dose:Dose)(implicit flash:Flash)
+@(dose:Dose)(implicit flash:Flash, session:play.api.mvc.Session)
 
 @import Option._
 @import helper._
