--- a/app/views/doses/create.scala.html
+++ b/app/views/doses/create.scala.html
@@ -7,26 +7,26 @@
 @main("Create Dose"){
 	<form method="POST" action="@routes.Doses.create(id)">
 	   <div class="span12">
-	     <label title="Medicine" for="medicine">Medicine:</label><br>
+	     <label title="Medicine" for="medicine">Medicine</label>
 	     <input class="span12" type="text" name="medicine" id="medicine" placeholder="Place a Medicine"/>
 	   </div>
 	   <div class="span12">
-	     <label title="Amount" for="amount">Amount:</label><br>
+	     <label title="Amount" for="amount">Amount</label>
 	     <input class="span12" type="text" name="amount" id="amount" placeholder="Place the amount required"/>
 	   </div>
 	   <div class="span12">
-	     <label title="Measure" for="measure">Measure:</label><br>
+	     <label title="Measure" for="measure">Measure</label>
 	     <input class="span12" type="text" name="measure" id="measure" placeholder="Place the measure"/>
 	   </div>
 	   <div class="span12">
-	     <label title="User" for="user_id">User:</label><br>
+	     <label title="User" for="user_id">User</label>
 	     <input class="span12" class="span12" type="text" name="user_id" id="user_id" placeholder="Place the user"/>
 	   </div>
 	   <div class="span12">
-	   	 <input type="submit" title="Submit" value="Check" class="btn btn-success span12"/>
+	   	 <input type="submit" title="Submit" value="OK" class="myButton blue span12"/>
 	   </div>
 	   <div class="span12">
-	   	 <a title="Cancel" href="@routes.Application.index" class="btn span12">Cancel</a>
+	   	 <a title="Cancel" href="@routes.Application.index" class="myButton red span12">Cancel</a>
 	   </div>
 	</form>
 }
