--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -739,7 +739,7 @@ h4,
 h5,
 h6 {
   margin: 10px 0;
-  font-family: inherit;
+  font-family:'pixel-condensada',"Gill Sans",helvetica,arial;
   font-weight: bold;
   line-height: 20px;
   color: inherit;
@@ -1092,21 +1092,18 @@ input[type="color"],
 .uneditable-input {
   display: inline-block;
   height: 20px;
-  padding: 4px 6px;
+  padding: 4px 0px;
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 20px;
   color: #555555;
   vertical-align: middle;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
 }
 
 input,
 textarea,
 .uneditable-input {
-  width: 206px;
+  width: 100%;
 }
 
 textarea {
