--- a/app/views/doses/index.scala.html
+++ b/app/views/doses/index.scala.html
@@ -3,7 +3,7 @@
 @main("Index") {
 	@for(dose <- seq){
 		<div class="myRow">
-			<div class="myButton gray a70">
+			<div class="myButton gray a70 la98">
 				<h3>@dose.medicine Alert!</h3>
 				<p>You need to take @dose.amount @dose.measure in @dose.period secconds.</p>
 			</div>
