--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,8 +13,7 @@
 
 .a100 {
 	width:100%;
-	height:100%;
-	padding:10% 0;
+	padding: 10px 0px;
 }
 
 .a70 {
@@ -28,8 +27,12 @@
 }
 
 .l98 {
-	height: 43px;
+	height: 38px;
 	padding-top: 33px;
+}
+
+.la98 {
+	height: 86px;
 }
 
 .clear {
@@ -48,7 +51,7 @@
 
 .myButton {
 	display:inline-block;
-	margin-bottom:0;
+	margin-bottom:10px;
 	font-size:14px;
 	line-height:20px;
 	color:#333;
@@ -78,6 +81,14 @@
 	color: #fff;
 }
 
+.green {
+	background-color:#53bdaf;
+	-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
+	-moz-box-shadow:inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
+	box-shadow:inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
+	color: #fff;
+}
+
 .dark-blue {
 	background-color:#36567c;
 	-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
@@ -91,7 +102,7 @@
 	margin-right: 15px;
 }
 
-input {
+input, select {
 	width: 100%;
 }
 
