--- a/app/views/doses/index.scala.html
+++ b/app/views/doses/index.scala.html
@@ -16,6 +16,6 @@
 		</div>
 	}
 	<div class="clear">
-		<a href="@routes.Doses.create(id)" id="add" title="Add Alerts" class="myButton dark-blue a100">Add Alerts</a>
+		<a href="@routes.Doses.create(id)" id="add" title="Add Alerts" class="myButton dark-blue a100">Add Alert</a>
 	</div>
 }
