--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,7 @@
         <link href="@routes.Assets.at("stylesheets/bootstrap-responsive.css")" rel="stylesheet">
     </head>
     <body>
-    	<div class="container-fluid">
+    	<div class="container-fluid header">
 	    	<header>
 	    		<div class="masthead">
 			        <ul class="nav nav-pills pull-right">
@@ -27,7 +27,7 @@
 	    	</header>
 	    </div>
 
-	    <div class="container-fluid">
+	    <div class="container-fluid content">
         	@content
         </div>
 
