--- a/.target/views/contacts/index.scala.html
+++ b/.target/views/contacts/index.scala.html
@@ -14,10 +14,10 @@
 			</div>
 		}
 	</ul>
-	<div class="span12">
-		<a title="Add contact" href="@routes.Contacts.create(user.id.get)" class="btn span12">Add contact</a>
+	<div class="">
+		<a title="Add contact" href="@routes.Contacts.create(id)" class="myButton green a100">Add contact</a>
 	</div>
-	<div class="span12">
-	   	<a title="Cancel" href="@routes.Users.update(id)" class="btn span12">Cancel</a>
+	<div class="">
+	   	<a title="Cancel" href="@routes.Users.update(id)" class="myButton red a100">Cancel</a>
 	</div>
 }
