--- a/app/views/managers/create.scala.html
+++ b/app/views/managers/create.scala.html
@@ -1,13 +1,12 @@
 @(id:Long)(implicit session:play.api.mvc.Session)
 @main("create manager") {	
 		<div class="container-fluid">
-			<h1>pastillApp</h1>
 			<h2>Add manager</h2>
 			<form class="well" method="POST" action="@routes.Managers.create(id)">
 				<label>Mail</label>
 				<input type="email" id="mail" name="mail" />
 				<br/>
-				<input type="submit" class="btn btn-primary" value="Submit" />
+				<input type="submit" class="myButton blue a100" value="Submit" />
 			</form>
 		</div>
 }
