--- a/app/views/users/update.scala.html
+++ b/app/views/users/update.scala.html
@@ -35,7 +35,7 @@
 	   </div>
 	   <div class="">
 	   	 <!--  <a title="Managee" href="@routes.Managers.createForm(user.id.get)" class="myButton green a100">List managee</a>-->
-	   	 <a title="Managee" href="@routes.Managers.listByManager(user.id.get)" class="myButton green a100">List managees</a>
+	   	 <a title="Managee" href="@routes.Managers.listByManager(user.id.get)" class="myButton yellow a100">List managees</a>
 	   </div>
 	   <div class="">
 	   	 <a title="Contact" href="@routes.Contacts.listByUser(user.id.get)" class="myButton green a100">List Contacts</a>
